2009-11-01  Kelly Norton  <knorton@google.com>

Reviewed by Timothy Hatcher.

        Does not send DOM dispatches to the InspectorTimelineAgent if there
        are no event listeners.
        https://bugs.webkit.org/show_bug.cgi?id=30995

        * dom/Node.cpp:
        (WebCore::eventHasListeners):
        (WebCore::Node::dispatchGenericEvent):
        * xml/XMLHttpRequest.cpp:
        (WebCore::XMLHttpRequest::callReadyStateChangeListener):

Canonical link: https://commits.webkit.org/41833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@50400 268f45cc-cd09-0410-ab3c-d52691b4dbfc